Criado através do Colaboratory

--- a/Exemplo_leitura.ipynb
+++ b/Exemplo_leitura.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "Exemplo_leitura.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPF43i0acVUbRk8JEz8sEGB",
+      "authorship_tag": "ABX9TyPR31NMGy3BN/eBsNV/xI26",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NKNamDujIGy_"
+      },
+      "source": [
+        "Ler o conteudo do ficheiro com dados de mamografias"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RE9YvG6A34QW"
@@ -43,8 +52,17 @@
       "source": [
         "l_df_mammography = pd.read_csv('https://raw.githubusercontent.com/SantiagoMadeira/dados/main/mammography.csv')"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dxZjas3bILgD"
+      },
+      "source": [
+        "Ver as primeiras 10 linhas do ficheiro"
+      ]
     },
     {
       "cell_type": "code",
@@ -54,12 +72,12 @@
           "height": 343
         },
         "id": "GGBs4CaH6MXx",
-        "outputId": "9ed28750-194d-43fb-c13e-dabc2872baad"
+        "outputId": "42dbead1-bef6-43fc-a5b0-f14401488552"
       },
       "source": [
         "l_df_mammography.head(10)"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,14 +232,175 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WaB_IS7VIO-d"
+      },
+      "source": [
+        "resumo dos dados do data set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 284
+        },
+        "id": "ljxyVjXy6i1H",
+        "outputId": "4d9b1594-c191-41ac-faf9-b668a4ec35a5"
+      },
+      "source": [
+        "l_df_mammography.describe()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>V1</th>\n",
+              "      <th>V2</th>\n",
+              "      <th>V3</th>\n",
+              "      <th>V4</th>\n",
+              "      <th>V5</th>\n",
+              "      <th>V6</th>\n",
+              "      <th>Goal</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>1.118300e+04</td>\n",
+              "      <td>11183.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1.096535e-10</td>\n",
+              "      <td>1.297595e-09</td>\n",
+              "      <td>5.698113e-10</td>\n",
+              "      <td>-2.435705e-09</td>\n",
+              "      <td>-1.120680e-09</td>\n",
+              "      <td>1.459483e-09</td>\n",
+              "      <td>0.023250</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0.150702</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>-7.844148e-01</td>\n",
+              "      <td>-4.701953e-01</td>\n",
+              "      <td>-5.916315e-01</td>\n",
+              "      <td>-8.595525e-01</td>\n",
+              "      <td>-3.778657e-01</td>\n",
+              "      <td>-9.457232e-01</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>-7.844148e-01</td>\n",
+              "      <td>-4.701953e-01</td>\n",
+              "      <td>-5.916315e-01</td>\n",
+              "      <td>-8.595525e-01</td>\n",
+              "      <td>-3.778657e-01</td>\n",
+              "      <td>-9.457232e-01</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>-1.085769e-01</td>\n",
+              "      <td>-3.949941e-01</td>\n",
+              "      <td>-2.309790e-01</td>\n",
+              "      <td>-8.595525e-01</td>\n",
+              "      <td>-3.778657e-01</td>\n",
+              "      <td>-9.457232e-01</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>3.139489e-01</td>\n",
+              "      <td>-7.649473e-02</td>\n",
+              "      <td>2.198366e-01</td>\n",
+              "      <td>8.202077e-01</td>\n",
+              "      <td>-3.778657e-01</td>\n",
+              "      <td>1.016613e+00</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>3.150844e+01</td>\n",
+              "      <td>5.085849e+00</td>\n",
+              "      <td>2.947777e+01</td>\n",
+              "      <td>9.591164e+00</td>\n",
+              "      <td>2.361712e+01</td>\n",
+              "      <td>1.949027e+00</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 V1            V2  ...            V6          Goal\n",
+              "count  1.118300e+04  1.118300e+04  ...  1.118300e+04  11183.000000\n",
+              "mean   1.096535e-10  1.297595e-09  ...  1.459483e-09      0.023250\n",
+              "std    1.000000e+00  1.000000e+00  ...  1.000000e+00      0.150702\n",
+              "min   -7.844148e-01 -4.701953e-01  ... -9.457232e-01      0.000000\n",
+              "25%   -7.844148e-01 -4.701953e-01  ... -9.457232e-01      0.000000\n",
+              "50%   -1.085769e-01 -3.949941e-01  ... -9.457232e-01      0.000000\n",
+              "75%    3.139489e-01 -7.649473e-02  ...  1.016613e+00      0.000000\n",
+              "max    3.150844e+01  5.085849e+00  ...  1.949027e+00      1.000000\n",
+              "\n",
+              "[8 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ljxyVjXy6i1H"
+        "id": "DgofaPGOH-cK"
       },
       "source": [
         ""
